--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
-{
+{ "name": "clark-county-client",
+"version": "1.0.0",
+"description": "",
+"main": "server/index.js",
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
+"keywords": [],
+"author": "",
+"license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
